fix: hide katex expression overflow

--- a/src/styles/main.sass
+++ b/src/styles/main.sass
@@ -106,6 +106,9 @@ h1
   letter-spacing: -0.02em
   line-height: 40px
   font-size: 28px
+
+.katex-display
+  overflow: auto
 // a {
 //   color: inherit;
 //   text-decoration: inherit;
